openvidu-components: Improved UI when media devices are not available

--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/cn.json
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/cn.json
@@ -21,45 +21,47 @@
 		"DEVICE_SECTION": "选择你的设备",
 		"VIDEO_DEVICE": "视频设备",
 		"AUDIO_DEVICE": "音频设备",
+		"NO_VIDEO_DEVICE": "未找到视频设备",
+		"NO_AUDIO_DEVICE": "未找到音频设备",
 		"JOIN": "加入会话",
 		"PREPARING": "筹备会议"
 	},
 	"TOOLBAR": {
-		"MUTE_AUDIO":"将你的音频静音",
+		"MUTE_AUDIO": "将你的音频静音",
 		"UNMUTE_AUDIO": "取消音频静音",
-		"MUTE_VIDEO":  "将你的视频静音",
+		"MUTE_VIDEO": "将你的视频静音",
 		"UNMUTE_VIDEO": "取消你的视频静音",
-		"ENABLE_SCREEN":"启用屏幕共享",
-		"DISABLE_SCREEN":"禁用屏幕共享",
-		"MORE_OPTIONS":"更多选项",
-		"FULLSCREEN":"全屏",
+		"ENABLE_SCREEN": "启用屏幕共享",
+		"DISABLE_SCREEN": "禁用屏幕共享",
+		"MORE_OPTIONS": "更多选项",
+		"FULLSCREEN": "全屏",
 		"EXIT_FULLSCREEN": "退出全屏",
 		"ENABLE_CAPTIONS": "启用字幕",
 		"DISABLE_CAPTIONS": "禁用字幕",
-		"BACKGROUND":"背景效果",
+		"BACKGROUND": "背景效果",
 		"START_RECORDING": "开始录音",
 		"STOP_RECORDING": "停止录制",
-		"SETTINGS":"设置",
-		"LEAVE":"离开会议",
-		"PARTICIPANTS":"参与者",
-		"CHAT":"聊天",
+		"SETTINGS": "设置",
+		"LEAVE": "离开会议",
+		"PARTICIPANTS": "参与者",
+		"CHAT": "聊天",
 		"ACTIVITIES": "活动"
 	},
 	"STREAM": {
-		"SETTINGS":"设置",
-		"MUTE_SOUND":"静音",
-		"UNMUTE_SOUND":"取消静音",
+		"SETTINGS": "设置",
+		"MUTE_SOUND": "静音",
+		"UNMUTE_SOUND": "取消静音",
 		"ZOOM_IN": "放大",
-		"ZOOM_OUT":"缩小",
+		"ZOOM_OUT": "缩小",
 		"REPLACE_SCREEN": "更换屏幕"
 	},
 	"PANEL": {
 		"CLOSE": "关闭",
 		"CHAT": {
-			"TITLE":  "聊天",
+			"TITLE": "聊天",
 			"YOU": "你",
 			"SUBTITLE": "信息将在会议结束时被删除",
-			"PLACEHOLDER":  "发送消息...",
+			"PLACEHOLDER": "发送消息...",
 			"SEND": "发送"
 		},
 		"PARTICIPANTS": {
@@ -77,7 +79,7 @@
 		},
 		"BACKGROUND": {
 			"TITLE": "背景效果",
-			"BLURRED_SECTION":  "没有效果和模糊的背景",
+			"BLURRED_SECTION": "没有效果和模糊的背景",
 			"NO_EFFECTS": "没有背景效果",
 			"BLURRED_EFFECT": "模糊的背景",
 			"IMAGES_SECTION": "背景图像"
