--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/hi.json
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/hi.json
@@ -21,6 +21,8 @@
 		"DEVICE_SECTION": "अपने डिवाइस चुनें",
 		"VIDEO_DEVICE": "वीडियो डिवाइस",
 		"AUDIO_DEVICE": "ऑडियो डिवाइस",
+		"NO_VIDEO_DEVICE": "वीडियो डिवाइस नहीं मिला",
+		"NO_AUDIO_DEVICE": "ऑडियो डिवाइस नहीं मिला",
 		"JOIN": "सत्र में शामिल हों",
 		"PREPARING": "सत्र तैयार कर रहा है ..."
 	},
@@ -43,7 +45,7 @@
 		"LEAVE": "सत्र छोड़ें",
 		"PARTICIPANTS": "सदस्य",
 		"CHAT": "बातचीत",
-        "ACTIVITIES": "गतिविधियाँ"
+		"ACTIVITIES": "गतिविधियाँ"
 	},
 	"STREAM": {
 		"SETTINGS": "सेटिंग्स",
@@ -82,7 +84,7 @@
 			"BLURRED_EFFECT": "पृष्ठभूमि धुंधली है",
 			"IMAGES_SECTION": "पृष्ठभूमि छवियां"
 		},
-        "RECORDING": {
+		"RECORDING": {
 			"TITLE": "रिकॉर्डिंग",
 			"SUBTITLE": "अपनी बैठक को भावी पीढ़ी के लिए रिकॉर्ड करें",
 			"CONTENT_TITLE": "अपना वीडियो कॉल रिकॉर्ड करें",
@@ -98,7 +100,7 @@
 			"NO_MODERATOR": "केवल मॉडरेटर ही रिकॉर्डिंग शुरू कर सकता है"
 		}
 	},
-    "ERRORS": {
+	"ERRORS": {
 		"SESSION": "सत्र से जुड़ने में त्रुटि हुई",
 		"CONNECTION": "कनेक्शन खो गया",
 		"RECONNECT": "ओह! सत्र से फिर से कनेक्ट करने का प्रयास कर रहा है",
