--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/ja.json
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/ja.json
@@ -1,5 +1,5 @@
 {
-    "ADMIN": {
+	"ADMIN": {
 		"LOGIN": "ログイン",
 		"SECRET": "ひみつ",
 		"SECRET_REQURED": "秘密が必要です",
@@ -15,90 +15,92 @@
 		"OUTPUT": "出力モード",
 		"POWERED_BY": "搭載"
 	},
-    "PREJOIN": {
-        "NICKNAME_SECTION": "ニックネームを設定してください",
-        "NICKNAME": "ニックネーム",
-        "DEVICE_SECTION": "デバイスを選択してください",
-        "VIDEO_DEVICE": "ビデオデバイス",
-        "AUDIO_DEVICE": "オーディオデバイス",
-        "JOIN": "セッションに参加する",
-        "PREPARING": "セッションの準備中..."
-    },
-    "TOOLBAR": {
-        "MUTE_AUDIO": "オーディオをミュートする",
-        "UNMUTE_AUDIO": "オーディオをミュートしない",
-        "MUTE_VIDEO": "ビデオをミュートする",
-        "UNMUTE_VIDEO": "ビデオをミュートしない",
-        "ENABLE_SCREEN": "スクリーン共有を有効にする",
-        "DISABLE_SCREEN": "スクリーン共有を無効にする",
-        "MORE_OPTIONS": "その他のオプション",
-        "FULLSCREEN": "フルスクリーン",
-        "EXIT_FULLSCREEN": "フルスクリーンを終了する",
-        "ENABLE_CAPTIONS": "字幕を有効にする",
+	"PREJOIN": {
+		"NICKNAME_SECTION": "ニックネームを設定してください",
+		"NICKNAME": "ニックネーム",
+		"DEVICE_SECTION": "デバイスを選択してください",
+		"VIDEO_DEVICE": "ビデオデバイス",
+		"AUDIO_DEVICE": "オーディオデバイス",
+		"NO_VIDEO_DEVICE": "ビデオデバイスが見つかりません",
+		"NO_AUDIO_DEVICE": "オーディオデバイスが見つかりません",
+		"JOIN": "セッションに参加する",
+		"PREPARING": "セッションの準備中..."
+	},
+	"TOOLBAR": {
+		"MUTE_AUDIO": "オーディオをミュートする",
+		"UNMUTE_AUDIO": "オーディオをミュートしない",
+		"MUTE_VIDEO": "ビデオをミュートする",
+		"UNMUTE_VIDEO": "ビデオをミュートしない",
+		"ENABLE_SCREEN": "スクリーン共有を有効にする",
+		"DISABLE_SCREEN": "スクリーン共有を無効にする",
+		"MORE_OPTIONS": "その他のオプション",
+		"FULLSCREEN": "フルスクリーン",
+		"EXIT_FULLSCREEN": "フルスクリーンを終了する",
+		"ENABLE_CAPTIONS": "字幕を有効にする",
 		"DISABLE_CAPTIONS": "字幕を無効にする",
-        "BACKGROUND": "背景効果",
-        "START_RECORDING": "録画開始",
+		"BACKGROUND": "背景効果",
+		"START_RECORDING": "録画開始",
 		"STOP_RECORDING": "録画の停止",
-        "SETTINGS": "設定",
-        "LEAVE": "セッションを終了する",
-        "PARTICIPANTS": "参加者",
-        "CHAT": "チャット",
-        "ACTIVITIES": "アクティビティ"
-    },
-    "STREAM": {
-        "SETTINGS": "設定",
-        "MUTE_SOUND": "サウンドをミュートする",
-        "UNMUTE_SOUND": "サウンドをミュートしない",
-        "ZOOM_IN": "拡大する",
-        "ZOOM_OUT": "縮小する",
-        "REPLACE_SCREEN": "スクリーンを入れ替える"
-    },
-    "PANEL": {
-        "CLOSE": "閉じる",
-        "CHAT": {
-            "TITLE": "チャット",
-            "YOU": "あなた",
-            "SUBTITLE": "メッセージはセッション終了時に削除されます",
-            "PLACEHOLDER": "メッセージを送信...",
-            "SEND": "送信する"
-        },
-        "PARTICIPANTS": {
-            "TITLE": "参加者",
-            "CAMERA": "カメラ",
-            "SCREEN": "スクリーン"
-        },
-        "SETTINGS": {
+		"SETTINGS": "設定",
+		"LEAVE": "セッションを終了する",
+		"PARTICIPANTS": "参加者",
+		"CHAT": "チャット",
+		"ACTIVITIES": "アクティビティ"
+	},
+	"STREAM": {
+		"SETTINGS": "設定",
+		"MUTE_SOUND": "サウンドをミュートする",
+		"UNMUTE_SOUND": "サウンドをミュートしない",
+		"ZOOM_IN": "拡大する",
+		"ZOOM_OUT": "縮小する",
+		"REPLACE_SCREEN": "スクリーンを入れ替える"
+	},
+	"PANEL": {
+		"CLOSE": "閉じる",
+		"CHAT": {
+			"TITLE": "チャット",
+			"YOU": "あなた",
+			"SUBTITLE": "メッセージはセッション終了時に削除されます",
+			"PLACEHOLDER": "メッセージを送信...",
+			"SEND": "送信する"
+		},
+		"PARTICIPANTS": {
+			"TITLE": "参加者",
+			"CAMERA": "カメラ",
+			"SCREEN": "スクリーン"
+		},
+		"SETTINGS": {
 			"TITLE": "設定",
 			"GENERAL": "全般的",
 			"VIDEO": "ビデオ",
 			"AUDIO": "オーディオ",
-			"LANGUAGE":"言語",
-            "CAPTIONS": "字幕"
+			"LANGUAGE": "言語",
+			"CAPTIONS": "字幕"
 		},
-        "BACKGROUND": {
-            "TITLE": "背景効果",
-            "BLURRED_SECTION": "エフェクトなし、ぼやけた背景",
-            "NO_EFFECTS": "背景エフェクトなし",
-            "BLURRED_EFFECT": "ぼやけた背景",
-            "IMAGES_SECTION": "背景画像"
-        },
-        "RECORDING": {
+		"BACKGROUND": {
+			"TITLE": "背景効果",
+			"BLURRED_SECTION": "エフェクトなし、ぼやけた背景",
+			"NO_EFFECTS": "背景エフェクトなし",
+			"BLURRED_EFFECT": "ぼやけた背景",
+			"IMAGES_SECTION": "背景画像"
+		},
+		"RECORDING": {
 			"TITLE": "レコーディング",
 			"SUBTITLE": "会議を録音して後世に残す",
 			"CONTENT_TITLE": "ビデオ通話を録音する",
 			"CONTENT_SUBTITLE": "録音が完了したら、簡単にダウンロードできます",
 			"STARTING": "録画開始",
-            "STOPPING": "録音を停止します",
+			"STOPPING": "録音を停止します",
 			"PLAY": "遊ぶ",
 			"DELETE": "消去",
-            "CANCEL": "キャンセル",
+			"CANCEL": "キャンセル",
 			"DELETE_QUESTION": "録音を削除してもよろしいですか",
 			"DOWNLOAD": "ダウンロード",
-            "RECORDINGS": "録画",
+			"RECORDINGS": "録画",
 			"NO_MODERATOR": "録音を開始できるのは、モデレーターのみです"
 		}
-    },
-    "ERRORS": {
+	},
+	"ERRORS": {
 		"SESSION": "セッションへの接続にエラーが発生しました",
 		"CONNECTION": "接続が失われました",
 		"RECONNECT": "セッションへの再接続を試みています",
