--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/cn.json
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/cn.json
@@ -75,7 +75,8 @@
 			"VIDEO": "视频",
 			"AUDIO": "声音的",
 			"LANGUAGE": "语",
-			"CAPTIONS": "字幕"
+			"CAPTIONS": "字幕",
+			"CAPTIONS_LANG_TEXT": "选择会话参与者将使用的语言。字幕将以该语言显示。"
 		},
 		"BACKGROUND": {
 			"TITLE": "背景效果",
