--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/es.json
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/es.json
@@ -57,6 +57,8 @@
 	},
 	"PANEL": {
 		"CLOSE": "Cerrar",
+		"SEE_MORE": "Ver más",
+		"PRO_FEATURE": "Esta funcionalidad es parte de OpenVidu PRO",
 		"CHAT": {
 			"TITLE": "Chat",
 			"YOU": "Tú",
