--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/it.json
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/it.json
@@ -57,6 +57,8 @@
 	},
 	"PANEL": {
 		"CLOSE": "Chiudi",
+		"SEE_MORE": "Vedi di più",
+		"PRO_FEATURE": "Questa funzione fa parte del livello OpenVidu PRO",
 		"CHAT": {
 			"TITLE": "Chat",
 			"YOU": "Tu",
