--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/nl.json
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/nl.json
@@ -57,6 +57,8 @@
 	},
 	"PANEL": {
 		"CLOSE": "Sluiten",
+		"SEE_MORE": "Zie meer",
+		"PRO_FEATURE": "Deze functie is onderdeel van OpenVidu PRO tier",
 		"CHAT": {
 			"TITLE": "Chat",
 			"YOU": "Jij",
