--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/pt.json
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/pt.json
@@ -57,6 +57,8 @@
 	},
 	"PANEL": {
 		"CLOSE": "Fechar",
+		"SEE_MORE": "Ver mais",
+		"PRO_FEATURE": "Esta funcionalidade é parte do OpenVidu PRO tier",
 		"CHAT": {
 			"TITLE": "Chat",
 			"YOU": "Você",
