--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/ja.json
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/ja.json
@@ -112,6 +112,7 @@
 		"SCREEN_SHARING": "画面共有にエラーが発生しました",
 		"SCREEN_SUPPORT": "お使いのブラウザは画面共有に対応していません",
 		"MEDIA_ACCESS": "メディアデバイスへのアクセスが許可されませんでした",
-		"DEVICE_NOT_FOUND": "ビデオまたはオーディオデバイスが見つかりませんでした 最低1台は接続してください"
+		"DEVICE_NOT_FOUND": "ビデオまたはオーディオデバイスが見つかりませんでした 最低1台は接続してください",
+		"SST_CONNECTION": "接続が失われました。音声からテキストへの変換サービスに再接続しています"
 	}
 }
