--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/pt.json
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/pt.json
@@ -112,6 +112,7 @@
 		"SCREEN_SHARING": "ecrã_partilha de erros",
 		"SCREEN_SUPPORT": "O seu browser não suporta a partilha de ecrãs",
 		"MEDIA_ACCESS": "Não foi permitido o acesso a dispositivos de media",
-		"DEVICE_NOT_FOUND": "Nenhum dispositivo de vídeo ou áudio foi encontrado. Por favor, ligue pelo menos um"
+		"DEVICE_NOT_FOUND": "Nenhum dispositivo de vídeo ou áudio foi encontrado. Por favor, ligue pelo menos um",
+		"SST_CONNECTION": "Conexão perdida. Reconectando ao serviço de texto de voz..."
 	}
 }
