openvidu-components: Added streaming activity
- Added streaming activity panel 
- Added streaming structurals directives
- Added streaming attributes directives
- Added e2e test
- Updated test app

openvidu-components: Updated e2e configuration


openvidu-components: Skipped pro e2e tests


openvidu-components: Allowed streaming for moderators only


openvidu-components: Request MODERATOR connection in testapp


openvidu-components: Fixed streaming signals


openvidu-components: Fixed bug with streaming status


openvidu-components: Fixed streaming button on status failed


openvidu-components: Refactored activities checks


openvidu-components: Forced streaming status to enum value


openvidu-components: Added non available error in streaming activity  

Streaming activity will show paid feature error if the service is not available
openvidu-components: Created and exported streaming error type


openvidu-components: Updated e2e tests


openvidu-components: Updated testapp 


openvidu-components: Enabled streaming input wehn module is disabled


openvidu-components: Updated e2e tests


openvidu-components: Updated docs


openvidu-components: Moved streaming directive to its component 

Moved streaming directive to streaming component instead of activities component 
openvidu-components: Updated testapp 


openvidu-components: Made streaming service public


ci: Send branch name in event dispatch


openvidu-components: Updated test app

--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/cn.json
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/cn.json
@@ -59,6 +59,7 @@
 		"CLOSE": "关闭",
 		"SEE_MORE": "查看更多",
 		"PRO_FEATURE": "此功能属于OpenVidu PRO级别",
+		"PAID_FEATURE": "此功能是 OpenVidu 商业服务的一部分。请通过 commercial@openvidu.io 联系我们了解更多信息。",
 		"CHAT": {
 			"TITLE": "聊天",
 			"YOU": "你",
@@ -101,6 +102,17 @@
 			"DOWNLOAD": "下载",
 			"RECORDINGS": "录制",
 			"NO_MODERATOR": "只有主持人可以开始录音"
+		},
+		"STREAMING": {
+			"TITLE": "直播",
+			"SUBTITLE": "将会议直播给观众",
+			"CONTENT_SUBTITLE": "OpenVidu需要RTMP直播平台的URL。",
+			"START": "开始直播",
+			"STOP": "结束直播",
+			"URL": "输入您的RTMP URL",
+			"CANCEL": "取消",
+			"REQUIRED_URL": "RTMP url 是必需的",
+			"NO_MODERATOR": "只有主持人才能开始流媒体"
 		}
 	},
 	"ERRORS": {
