--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/de.json
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/de.json
@@ -59,6 +59,7 @@
 		"CLOSE": "Schließen",
 		"SEE_MORE": "Mehr sehen",
 		"PRO_FEATURE": "Diese Funktion ist Teil des OpenVidu PRO-Tiers",
+		"PAID_FEATURE": "Diese Funktion ist Teil des kommerziellen Dienstes von OpenVidu. Bitte kontaktieren Sie uns über commercial@openvidu.io für weitere Informationen.",
 		"CHAT": {
 			"TITLE": "Chat",
 			"YOU": "Sie",
@@ -101,6 +102,17 @@
 			"DOWNLOAD": "Download",
 			"RECORDINGS": "AUFZEICHNUNGEN",
 			"NO_MODERATOR": "Nur der MODERATOR kann die Aufzeichnung starten"
+		},
+		"STREAMING": {
+			"TITLE": "Streaming",
+			"SUBTITLE": "Streamen Sie Ihr Meeting an Ihr Publikum",
+			"CONTENT_SUBTITLE": "OpenVidu benötigt die RTMP-URL der Streaming-Plattform.",
+			"START": "Streaming starten",
+			"STOP": "Streaming beenden",
+			"URL": "Geben Sie Ihre RTMP-URL ein",
+			"CANCEL": "Absagen",
+			"REQUIRED_URL": "RTMP url ist erforderlich",
+			"NO_MODERATOR": "Nur der Moderator kann den Stream starten"
 		}
 	},
 	"ERRORS": {
