--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/hi.json
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/hi.json
@@ -59,6 +59,7 @@
 		"CLOSE": "बंद करें",
 		"SEE_MORE": "और देखें",
 		"PRO_FEATURE": "यह सुविधा OpenVidu PRO टायर का हिस्सा है",
+		"PAID_FEATURE": "यह सुविधा OpenVidu वाणिज्यिक सेवा का हिस्सा है। अधिक जानकारी के लिए कृपया commercial@openvidu.io के माध्यम से हमसे संपर्क करें।",
 		"CHAT": {
 			"TITLE": "बातचीत",
 			"YOU": "आप",
@@ -101,6 +102,17 @@
 			"DOWNLOAD": "डाउनलोड",
 			"RECORDINGS": "रिकॉर्डिंग",
 			"NO_MODERATOR": "केवल मॉडरेटर ही रिकॉर्डिंग शुरू कर सकता है"
+		},
+		"STREAMING": {
+			"TITLE": "स्ट्रीमिंग",
+			"SUBTITLE": "अपने मीटिंग को अपने दर्शकों को स्ट्रीम करें",
+			"CONTENT_SUBTITLE": "OpenVidu को स्ट्रीमिंग प्लेटफॉर्म के RTMP url की आवश्यकता है।",
+			"START": "स्ट्रीमिंग शुरू करें",
+			"STOP": "स्ट्रीमिंग बंद करें",
+			"URL": "अपना RTMP url दर्ज करें",
+			"CANCEL": "रद्द करें",
+			"REQUIRED_URL": "RTMP url आवश्यक है",
+			"NO_MODERATOR": "केवल मोडेरेटर स्ट्रीमिंग शुरू कर सकते हैं"
 		}
 	},
 	"ERRORS": {
